<resources>
    <string name="MSG_FDChek_reject">Barcode data exceeds! The length is not allowed.</string>
    <string name="MSG_WifiAlert">Wi-Fi Signal Strength:%1$d</string>
    <string name="MSG_exit">Do you want o exit?</string>
    <string name="MSG_restart_lan">You must restart application for the language change to take effect. Do you want o exit?</string>
    <string name="MSG_BattAlert">Battery Level:%1$s</string>
    <string name="MSG_get_cust_dev_name">Device Name</string>
    <string name="MSG_ChangeSession">Change session to %s</string>
    <string name="MSG_DeleteSession_Warn">There must be at least one session.</string>
    <string name="MSG_Activate_Warn">The activation key is not valid.</string>
    <string name="MSG_Activate_Succ">You have activated successful, please re-execute the application to use full functions.</string>
    <string name="MSG_Export_Warn">Export settings failed.</string>
    <string name="MSG_Export_ok">Export settings successfully.</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="strConnection">Connect</string>
    <string name="strSessionSettings">Settings</string>
    <string name="strFullScreen">Full Screen</string>
    <string name="host_type_key" translatable="false">host_type_key</string>
    <string name="host_ip_key" translatable="false">host_ip_key</string>
    <string name="host_port_key" translatable="false">host_port_key</string>
    <string name="keep_alive_key" translatable="false">keep_alive_key</string>
    <string name="out_range_key" translatable="false">out_range_key</string>
    <string name="log_key" translatable="false">log_key</string>
    <string name="data_upper_case_key" translatable="false">tn_data_upper_case_key</string>
    <string name="data_upper_case">Data Input Uppercase</string>
    <string name="tn_codepage_key" translatable="false">tn_codepage_key</string>
    <string name="tn_codepage">Code Page</string>
    <string name="tn_auto_reset_key" translatable="false">auto_reset_key</string>
    <string name="tn_auto_unlock">Auto Unlock Input</string>
    <string name="tn_field_length_if_exceed_key" translatable="false">field_length_if_exceed_key</string>
    <string name="tn_field_length_if_exceed">Field Length if Exceed</string>
    <string name="tn_popup_window_key" translatable="false">tn_popup_window_key</string>
    <string name="tn_popup_window" translatable="false">Pop-up Window</string>
    <string name="tn_popup_row_key" translatable="false">tn_popup_row_key</string>
    <string name="tn_popup_row">Display Error in Row</string>
    <string name="tn_devname_key" translatable="false">devname_key</string>
    <string name="tn_devname">Custom Device Name</string>
    <string name="tn_devname_off"></string>
    <string name="vt_linebuffer_key" translatable="false">vt_linebuffer_key</string>
    <string name="vt_linebuffer">LineBuffer</string>
    <string name="vt_echo_key" translatable="false">vt_echo_key</string>
    <string name="vt_echo">Local Echo</string>
    <string name="vt_send_string_key" translatable="false">vt_send_string_key</string>
    <string name="vt_send_string">Send String When Connect</string>
    <string name="vt_char_set_key" translatable="false">vt_char_set_key</string>
    <string name="vt_char_set">Remote Character Set</string>
    <string name="screen_session_number_key" translatable="false">screen_session_number_key</string>
    <string name="screen_session_number">Show Session Number</string>
    <string name="screen_session_status_key" translatable="false">screen_session_status_key</string>
    <string name="screen_session_status">Show Connecting Host IP</string>
    <string name="screen_wifi_alert_key" translatable="false">screen_wifi_alert_key</string>
    <string name="screen_wifi_alert">Choose Wi-Fi Alert Level(%)</string>
    <string name="screen_battery_alert_key" translatable="false">screen_battery_alert_key</string>
    <string name="screen_battery_alert">Choose Battery Alert Level(%)</string>
    <string name="screen_act_macro_key" translatable="false">screen_act_macro_key</string>
    <string name="screen_act_macro">Activate Macro</string>
    <string name="screen_cursor_type_key" translatable="false">screen_cursor_type_key</string>
    <string name="screen_cursor_type">Cursor Type</string>
    <string name="screen_auto_scroll_key" translatable="false">screen_auto_scroll_key</string>
    <string name="screen_alert_off">No Alert</string>
    <string name="screen_auto_track">Auto Tracking</string>
    <string name="screen_auto_track_off">Not Track</string>
    <string name="screen_track_lock_key" translatable="false">screen_track_lock_key</string>
    <string name="screen_track_lock">Locked Location</string>
    <string name="screen_font_key" translatable="false">screen_font_key</string>
    <string name="screen_font">Fonts</string>
    <string name="screen_font_size_key" translatable="false">screen_font_size_key</string>
    <string name="screen_font_size">Font Size</string>
    <string name="screen_auto_full_on_conn_key" translatable="false">screen_auto_full_on_conn_key</string>
    <string name="screen_auto_full_on_conn">Auto Full Screen On Connection</string>
    <string name="full_screen">Full Screen</string>
    <string name="vt_good_feedback">Good Feedback</string>
    <string name="vt_error_feedback">Error Feedback</string>
    <string name="fb_good_key" translatable="false">fb_good_key</string>
    <string name="fb_error_key" translatable="false">fb_error_key</string>
    <string name="fb_type_title">Feedback Type</string>
    <string name="fb_good_content_key" translatable="false">fb_good_content_key</string>
    <string name="fb_error_content_key" translatable="false">fb_error_content_key</string>
    <string name="fb_good_sound_key" translatable="false">fb_good_sound_key</string>
    <string name="fb_err_sound_key" translatable="false">fb_err_sound_key</string>
    <string name="goodvib_key" translatable="false">goodvib_key</string>
    <string name="errvib_key" translatable="false">errvib_key</string>
    <string name="vib_title">Vibration Duration</string>
    <string name="soundfile_title">Sound File Name</string>
    <string name="fb_tn_msg_sound_key" translatable="false">fb_tn_msg_sound_key</string>
    <string name="fb_tn_msg_vib_key" translatable="false">fb_tn_msg_vib_key</string>
    <string name="fb_tn_err_sound_key" translatable="false">fb_tn_err_sound_key</string>
    <string name="fb_tn_err_vib_key" translatable="false">fb_tn_err_vib_key</string>
    <string name="tn_msg_alarm_cate">Message Alarm</string>
    <string name="tn_err_alarm_cate">Error Alarm</string>
    <string name="str_access_ctrl">Access Control</string>
    <string name="str_activation_key">Activation Key</string>
    <string name="str_export">Export Settings</string>
    <string name="str_import">Import Settings</string>
    <string name="str_language">Languages</string>
    <string name="enter_pwd">Enter Password</string>
    <string name="enter_pwd2">Confirm Password</string>
    <string name="protect_settings">Select to apply password protection</string>
    <string name="protect_item_settings">Settings</string>
    <string name="protect_item_exit">Exit Application</string>
    <string name="protect_item_exit_full_screen">Exit Full Screen</string>
    <string name="host_profile">Host Profile</string>
    <string name="host_type">Host Type</string>
    <string name="pref_header_ip" translatable="false">IP</string>
    <string name="pref_header_port">Port</string>
    <string name="more">More...</string>
    <string name="emulation_setting">Emulation Settings</string>
    <string name="server_setting">Server Settings</string>
    <string name="error_message">Error Message</string>
    <string name="screen">Screen</string>
    <string name="alarm">Alarm</string>
    <string name="key_mapping">Key Mapping</string>
    <string name="ssh" translatable="false">SSH</string>
    <string name="ssh_key" translatable="false">ssh_key</string>
    <string name="ssh_on">Use SSH</string>
    <string name="ssh_off">Not use</string>
    <string name="ssh_log">SSH Log</string>
    <string name="ssh_log_sum">Generate SSH Log</string>
    <string name="ssh_log_key" translatable="false">ssh_log_key</string>
    <string name="ssh_auth_cate_key" translatable="false">ssh_auth_cate_key</string>
    <string name="ssh_auth_cate">Authentication</string>
    <string name="ssh_auth_type_key" translatable="false">ssh_auth_type_key</string>
    <string name="ssh_auth_type">Authentication Type</string>
    <string name="ssh_auth_setting_key" translatable="false">ssh_auth_setting_key</string>
    <string name="ssh_name_key" translatable="false">ssh_name_key</string>
    <string name="ssh_name">Login Name</string>
    <string name="ssh_key_file_key" translatable="false">ssh_key_file_key</string>
    <string name="ssh_key_file">Key File</string>
    <string name="ssh_general_cate">General Options</string>
    <string name="ssh_use_tcp_delay_key" translatable="false">ssh_use_tcp_delay_key</string>
    <string name="ssh_use_tcp_delay" translatable="false">Use TCP No-Delay</string>
    <string name="ssh_no_pseudo_key" translatable="false">ssh_no_pseudo_key</string>
    <string name="ssh_no_pseudo">No Pseudo-Terminal on Host</string>
    <string name="ssh_no_host_shell_key" translatable="false">ssh_no_host_shell_key</string>
    <string name="ssh_no_host_shell">No Host Shell</string>
    <string name="ssh_re_key_60_key" translatable="false">ssh_re_key_60_key</string>
    <string name="ssh_re_key_60">Re-Key Every 60 Minutes</string>
    <string name="ssh_re_key_1g_key" translatable="false">ssh_re_key_1g_key</string>
    <string name="ssh_re_key_1g">Re-Key Every 1G of Traffic</string>
    <string name="ssh_write_log_key" translatable="false">ssh_write_log_key</string>
    <string name="ssh_write_log">Overwrite Existing Log File</string>
    <string name="ssh_server_cate">Server</string>
    <string name="ssh_envir_key" translatable="false">ssh_envir_key</string>
    <string name="ssh_envir">Environment</string>
    <string name="ssh_cmd_key" translatable="false">ssh_cmd_key</string>
    <string name="ssh_cmd">Commands</string>
    <string name="ssh_tty_key" translatable="false">ssh_tty_key</string>
    <string name="ssh_tty" translatable="false">TTY</string>
    <string name="ssh_proxy_cate" translatable="false">Proxy</string>
    <string name="ssh_proxy_type_key" translatable="false">ssh_type_key</string>
    <string name="ssh_proxy_type">Type</string>
    <string name="ssh_proxy_host_key" translatable="false">ssh_host_key</string>
    <string name="ssh_proxy_host" translatable="false">Host</string>
    <string name="ssh_proxy_port_key" translatable="false">ssh_port_key</string>
    <string name="ssh_proxy_port" translatable="false">Port</string>
    <string name="ssh_proxy_user_key" translatable="false">ssh_proxy_user_key</string>
    <string name="ssh_proxy_user">User</string>
    <string name="ssh_proxy_pwd_key" translatable="false">ssh_proxy_pwd_key</string>
    <string name="ssh_proxy_pwd">Password</string>
    <string name="network">Network</string>
    <string name="keep_alive">Network Keep Alive</string>
    <string name="out_range">Detect Out Of Range</string>
    <string name="barcode_setting">Barcode Settings</string>
    <string name="config">Configuration</string>
    <string name="debug">Debug</string>
    <string name="generate_log">Generate Log</string>
    <string name="pref_Title_ReaderCmd">Control Reader</string>
    <string name="pref_Title_ReaderCmdEnable"> Reader Enable</string>
    <string name="pref_Title_ReaderCmdDisable"> Reader Disable</string>
    <string name="pref_Title_FeedBackCmd">Control Feedback</string>
    <string name="pref_Title_ControlCmdBadread">Bad Read</string>
    <string name="pref_Title_ControlCmdGoodread">Good Read</string>
</resources>