<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/ssh_name_key"
        android:title="@string/ssh_name"/>
    <ListPreference
        android:key="@string/ssh_key_file_key"
        android:title="@string/ssh_key_file" />
    <Preference
        android:key="@string/ssh_key_mgr_key_file_key"
        android:title="@string/ssh_key_mgr_key_file" />
    <PreferenceCategory
        android:title="@string/ssh_general_cate">
        <CheckBoxPreference
            android:key="@string/ssh_use_tcp_delay_key"
            android:title="@string/ssh_use_tcp_delay"/>
        <CheckBoxPreference
            android:key="@string/ssh_no_pseudo_key"
            android:title="@string/ssh_no_pseudo"/>
        <CheckBoxPreference
            android:key="@string/ssh_no_host_shell_key"
            android:title="@string/ssh_no_host_shell"/>
        <CheckBoxPreference
            android:key="@string/ssh_re_key_60_key"
            android:title="@string/ssh_re_key_60"/>
        <CheckBoxPreference
            android:key="@string/ssh_re_key_1g_key"
            android:title="@string/ssh_re_key_1g"/>
        <CheckBoxPreference
            android:key="@string/ssh_write_log_key"
            android:title="@string/ssh_write_log"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ssh_server_cate">
        <EditTextPreference
            android:key="@string/ssh_envir_key"
            android:title="@string/ssh_envir"/>
        <EditTextPreference
            android:key="@string/ssh_cmd_key"
            android:title="@string/ssh_cmd"/>
        <EditTextPreference
            android:key="@string/ssh_tty_key"
            android:title="@string/ssh_tty"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ssh_proxy_cate">
        <EditTextPreference
            android:key="@string/ssh_proxy_type_key"
            android:title="@string/ssh_proxy_type"/>
        <EditTextPreference
            android:key="@string/ssh_proxy_host_key"
            android:title="@string/ssh_proxy_host"/>
        <EditTextPreference
            android:key="@string/ssh_proxy_port_key"
            android:title="@string/ssh_proxy_port"/>
        <EditTextPreference
            android:key="@string/ssh_proxy_user_key"
            android:title="@string/ssh_proxy_user"/>
        <EditTextPreference
            android:key="@string/ssh_proxy_pwd_key"
            android:title="@string/ssh_proxy_pwd"/>
    </PreferenceCategory>
</PreferenceScreen>