<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/host_profile">
        <ListPreference
            android:key="@string/host_type_key"
            android:title="@string/host_type"
            android:entries="@array/sertype_array"
            android:entryValues="@array/sertype_array"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
        <com.te.UI.MyIPPreference
            android:title="@string/pref_header_ip"
            android:key="@string/host_ip_key"/>
        <EditTextPreference
            android:title="@string/pref_header_port"
            android:key="@string/host_port_key"/>
        <Preference
            android:title="@string/more">
            <intent
                android:targetPackage="com.example.terminalemulation"
                android:targetClass="com.te.UI.SessionSecondSettings"
                android:action="com.te.UI.SessionSecondSettings.ACTION_HOST_PROFILE">
            </intent>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/emulation_setting" >
        <PreferenceScreen
            android:title="@string/server_setting">
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/screen">
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/alarm">
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/key_mapping">
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/ssh">
            <SwitchPreference
                android:title="@string/ssh"
                android:summaryOff="@string/ssh_off"
                android:summaryOn="@string/ssh_on"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/network" >
        <CheckBoxPreference
            android:key="@string/keep_alive_key"
            android:title="@string/keep_alive"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="@string/out_range_key"
            android:title="@string/out_range"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/barcode_setting" >
        <PreferenceScreen
            android:title="@string/config">
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/debug" >
        <CheckBoxPreference
            android:key="@string/log_key"
            android:title="@string/generate_log"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
