<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/screen_session_number_key"
        android:title="@string/screen_session_number"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="@string/screen_session_status_key"
        android:title="@string/screen_session_status"
        android:defaultValue="false"/>
    <com.te.UI.TESwitchPreference
        android:key="@string/screen_wifi_alert_key"
        android:title="@string/screen_wifi_alert"
        android:summaryOff="@string/screen_alert_off"
        android:widgetLayout="@layout/te_switch"/>
    <com.te.UI.TESwitchPreference
        android:key="@string/screen_battery_alert_key"
        android:title="@string/screen_battery_alert"
        android:summaryOff="@string/screen_alert_off"
        android:widgetLayout="@layout/te_switch"/>
    <CheckBoxPreference
        android:key="@string/screen_act_macro_key"
        android:title="@string/screen_act_macro"
        android:defaultValue="false"/>
    <ListPreference
        android:key="@string/screen_cursor_type_key"
        android:title="@string/screen_cursor_type"
        android:entries="@array/cursor_type_array"
        android:entryValues="@array/cursor_type_array_vals"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
    <com.te.UI.TESwitchPreference
        android:key="@string/screen_auto_scroll_key"
        android:title="@string/screen_auto_track"
        android:summaryOff="@string/screen_auto_track_off"
        android:widgetLayout="@layout/te_switch"/>
    <Preference
        android:key="@string/screen_track_lock_key"
        android:title="@string/screen_track_lock">
    </Preference>
    <ListPreference
        android:key="@string/screen_font_key"
        android:title="@string/screen_font"
        android:entries="@array/font_array"
        android:entryValues="@array/font_array_vals"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
    <ListPreference
        android:key="@string/screen_font_size_key"
        android:title="@string/screen_font_size"
        android:entries="@array/font_size_array"
        android:entryValues="@array/font_size_array_vals"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
    <PreferenceScreen
        android:key="@string/screen_font_color_key"
        android:title="@string/screen_font_color">
    </PreferenceScreen>
    <PreferenceScreen
        android:key="@string/screen_bg_color_key"
        android:title="@string/screen_bg_color">
    </PreferenceScreen>
    <PreferenceCategory
        android:title="@string/full_screen">
        <CheckBoxPreference
            android:key="@string/screen_auto_full_on_conn_key"
            android:title="@string/screen_auto_full_on_conn"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="@string/screen_show_taskbar_key"
            android:title="@string/screen_show_taskbar"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
