<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.te.UI.TESwitchPreference
        android:key="@string/ssh_key"
        android:title="@string/ssh"
        android:summaryOn="@string/ssh_on"
        android:summaryOff="@string/ssh_off"
        android:widgetLayout="@layout/te_switch"/>
    <CheckBoxPreference
        android:key="@string/ssh_log_key"
        android:title="@string/ssh_log"
        android:summary="@string/ssh_log_sum"/>
    <PreferenceCategory
        android:title="@string/ssh_auth_cate"
        android:key="@string/ssh_auth_cate_key">
        <ListPreference
            android:key="@string/ssh_auth_type_key"
            android:title="@string/ssh_auth_type"
            android:entries="@array/ssh_auth_type_array"
            android:entryValues="@array/ssh_auth_type_array_vals"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
        <Preference
            android:key="@string/ssh_auth_setting_key" />
    </PreferenceCategory>
</PreferenceScreen>
