<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/data_upper_case_key"
        android:title="@string/data_upper_case"
        android:defaultValue="false" />
    <ListPreference
        android:key="@string/tn_codepage_key"
        android:title="@string/tn_codepage"
        android:entries="@array/codepage_array"
        android:entryValues="@array/codepage_array_vals"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"/>
    <CheckBoxPreference
        android:key="@string/tn_auto_reset_key"
        android:title="@string/tn_auto_unlock"
        android:defaultValue="false" />

    <ListPreference
        android:key="@string/tn_field_length_if_exceed_key"
        android:title="@string/tn_field_length_if_exceed"
        android:entries="@array/field_length_array"
        android:entryValues="@array/field_length_array_vals"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
    <com.te.UI.TESwitchPreference
        android:key="@string/tn_devname_key"
        android:title="@string/tn_devname"
        android:summaryOff="@string/tn_devname_off"
        android:widgetLayout="@layout/te_switch"/>
    <PreferenceCategory
        android:title="@string/error_message">
        <EditTextPreference
            android:title="@string/tn_popup_row"
            android:key="@string/tn_popup_row_key"
            android:inputType="number"
            android:selectAllOnFocus="true"/>
        <CheckBoxPreference
            android:key="@string/tn_popup_window_key"
            android:title="@string/tn_popup_window"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
