<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/data_upper_case_key"
        android:title="@string/data_upper_case"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="@string/vt_linebuffer_key"
        android:title="@string/vt_linebuffer"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="@string/vt_echo_key"
        android:title="@string/vt_echo"
        android:defaultValue="false"/>
    <Preference
        android:key="@string/vt_send_string_key"
        android:title="@string/vt_send_string">
    </Preference>
    <ListPreference
        android:key="@string/vt_char_set_key"
        android:title="@string/vt_char_set"
        android:entries="@array/char_set_array"
        android:entryValues="@array/char_set_array_vals"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
</PreferenceScreen>
