<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/tn_msg_alarm_cate">
        <Preference
            android:key="@string/fb_tn_msg_sound_key"
            android:title="@string/soundfile_title"/>
        <ListPreference
            android:key="@string/fb_tn_msg_vib_key"
            android:title="@string/vib_title"
            android:entries="@array/vib_arr"
            android:entryValues="@array/vib_arr_vals"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/tn_err_alarm_cate">
        <Preference
            android:key="@string/fb_tn_err_sound_key"
            android:title="@string/soundfile_title"/>
        <ListPreference
            android:key="@string/fb_tn_err_vib_key"
            android:title="@string/vib_title"
            android:entries="@array/vib_arr"
            android:entryValues="@array/vib_arr_vals"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
    </PreferenceCategory>
</PreferenceScreen>
