<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.cipherlab.terminalemulation.MainActivity" >
    <item
        android:id="@+id/connection"
        android:title="@string/strConnection"
        android:orderInCategory="100"
        android:icon="@drawable/ic_link_variant_white_48dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sessionSettings"
        android:title="@string/strSessionSettings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings_white_48dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/full_screen"
        android:title="@string/strFullScreen"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/access_ctrl"
        android:title="@string/str_access_ctrl"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/activation_key"
        android:title="@string/str_activation_key"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_settings"
        android:title="@string/str_export"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/import_settings"
        android:title="@string/str_import"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/language"
        android:title="@string/str_language"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <!--will remove-->
    <item
        android:id="@+id/key_gen"
        android:title="get key"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
