<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    
     <CheckBoxPreference
        android:key="Is_Goodfeedback_enable"
        android:title="@string/pref_Title_FeedBackCmd"
        android:defaultValue="false" />
            
       <Preference
            android:title="@string/pref_Title_ControlCmdGoodread"
            android:key="pregoodreadstring"
             android:dependency="Is_Goodfeedback_enable"
            />
            
       
       <Preference
            android:title="@string/pref_Title_ControlCmdBadread"
            android:key="prebadreadstring"
             android:dependency="Is_Goodfeedback_enable"
            />
          
       
      <CheckBoxPreference
        android:key="Is_ControlReader_enable"
        android:title="@string/pref_Title_ReaderCmd"
        android:defaultValue="false" />  
       
      <Preference
            android:title="@string/pref_Title_ReaderCmdEnable"
            android:key="preenabldereaderstring"
             android:dependency="Is_ControlReader_enable"
             
             />
         
       
       <Preference
            android:title="@string/pref_Title_ReaderCmdDisable"
            android:key="predisabldereaderstring"
             android:dependency="Is_ControlReader_enable"
             
             />
      
     
     

</PreferenceScreen>
